--- a/views/index.html
+++ b/views/index.html
@@ -1,14 +1,5 @@
-<section ng-controller="MainController">
-	<div ng-include src="'views/include/header.html'"></div>
-	<div class="container bs-docs-container">
-		<div class="row">
-			<div class="col-md-3">
-				<div ng-include src="'views/include/leftMenu.html'"></div>
-			</div>
-			<div class="col-md-9" role="main">
-				<div ng-include src="'views/index/content.html'"></div>
-			</div>
-		</div>
-		<div ng-include src="'views/include/footer.html'"></div>
-	</div>
-</section>
+<div ng-controller="PageController">
+
+	Index
+
+</div>
